# wuss

./: .clang-format  CMakeLists.txt  LICENSE  README.md  enclave.edl  enclave_wrapper.cpp  enclave_wrapper.hpp  main.cpp
_test/: enclave_t.h  enclave_u.h
cmake/: Dependencies.cmake  FindSGX.cmake
misc/: CMakeLists.txt  enclave.edl
tests/: CMakeLists.txt  wuss_tests.cpp
trusted/: CMakeLists.txt  ecalls.cpp  item.hpp  pswd_params.hpp  storage_handler.cpp  storage_handler.hpp  wallet.cpp  wallet.hpp
untrusted/: CMakeLists.txt  enclave_wrapper.cpp  enclave_wrapper.hpp  io_handler.cpp  io_handler.hpp  ocalls.cpp
